update dashboard schema
