# src/types.ts
@@ -1,0 +1,4 @@
+/**
+ * Stringified time frame type
+ */
+export type TimeFrame = 'MM' | 'YY' | '30D' | '60D' | '90D'| 'AT';
